fixed image stretching in card

--- a/src/components/AboutMeCard/about-card.scss
+++ b/src/components/AboutMeCard/about-card.scss
@@ -12,6 +12,7 @@
   &__img {
     border-radius: var(--border-radius);
     aspect-ratio: 1 / 1;
+    object-fit: cover;
   }
 
   --p-margin: .4rem;
